<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="assignments">Assignments</string>
    <string name="settings">Settings</string>
    <string name="time_per_session">Time Per Session</string>
    <string name="time_approximate">Time Approximate</string>
    <string name="due_date">Due Date</string>
    <string name="assignment_name">Assignment Name</string>
    <string name="choose">Choose</string>
    <string name="add_new_assignment">Add New Assignment</string>
    <string name="an_image">An image</string>
    <string name="weekly">Weekly</string>
    <string name="forward">forward</string>
    <string-array name="numbers">
        <item>0.5 hours</item>
        <item>1 hours</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="start">start</string>
    <string name="new_assignment">New Assignment</string>
    <string name="backwards"><![CDATA[<-]]></string>
    <string name="forwards"><![CDATA[->]]></string>
    <string name="goForward"><![CDATA[->]]></string>
    <string name="goBack"><![CDATA[<-]]></string>
    <string name="start_session">Start Session</string>
</resources>